[package]
name = "easy-mq-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
bincode = { version = "2.0.1", features = ["serde"] }
deadpool-redis = { version = "0.22.0", features = ["tokio-comp", "script"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4"] }
