[package]
name = "easy-mq-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
arc-swap = "1.7.1"
async-trait = "0.1.89"
bincode = { version = "2.0.1", features = ["serde"] }
chrono = "0.4.42"
deadpool-redis = { version = "0.22.0", features = ["tokio-comp", "script"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["time"], default-features = false }
tracing = "0.1.41"
uuid = { version = "1.18.1", features = ["v4"] }

[features]
cluster = ["deadpool-redis/cluster"]

[dev-dependencies]
tokio = { version = "1.48.0", features = ["full"] }
rand = "0.9.2"
serial_test = "3.2.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
inquire = "0.9.1"
